--- a/sell/src/main/resources/application.yml
+++ b/sell/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.jdbc.mysql.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: xxxx
     url: jdbc:mysql://xx.xx.xx.xx:3306/sell?characterEncoding=utf-8&useSSL=false
